updated homepage property

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "memory-game",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/mark-akom/memory-game",
+  "homepage": "http://mark-akom.github.io/memory-game",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
